# polars-statistics

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.beads/: issues.jsonl
.github/workflows/: ci.yml  conda.yml  docs.yml  publish.yml
API_REFERENCE/: index.html
api/: index.html
api/conventions/: index.html
api/outputs/: index.html
assets/: gen_plots.py
conda/: meta.yaml
docs/: API_REFERENCE.md  getting-started.md  index.md
docs/api/: README.md  conventions.md  outputs.md
docs/assets/: gen_plots.py
docs/examples/: ab-testing.md  advanced-correlation.md  categorical-analysis.md  equivalence-testing.md  forecast-comparison.md  glm-models.md  group-analysis.md  hypothesis-testing.md  regression-workflow.md  regularized-regression.md  special-models.md
docs/validation/: index.md
examples/: 01_ols_regression.py  pyproject.toml  rust_wls.rs
examples/ab-testing/: index.html
examples/advanced-correlation/: index.html
examples/categorical-analysis/: index.html
examples/equivalence-testing/: index.html
examples/forecast-comparison/: index.html
getting-started/: index.html
search/: search_index.json
src/: lib.rs
tests/: rust_api.rs  test_alm_parity.py  test_coverage.py  test_diagnostics_toolkit.py  test_formula.py  test_glm_lambda.py  test_glm_residuals.py  test_group_by_over.py  test_huber_logistic.py  test_influence_diagnostics.py  test_mc_dispersion.py  test_models.py  test_pls.py  test_residual_diagnostics.py  test_summary_predict.py
validation/: index.html
(+89 files in other folders)
